--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,9 +2,9 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "master" ]  # Adjust branch name if different
+    branches: [ "master" ] 
   pull_request:
-    branches: [ "master" ]  # Adjust branch name if different
+    branches: [ "master" ]
   schedule:
     - cron: '0 0 * * *'  # Daily schedule example
 
